--- a/src/Frontend/MyShop-Frontend/App.xaml
+++ b/src/Frontend/MyShop-Frontend/App.xaml
@@ -3,20 +3,17 @@
     x:Class="MyShop_Frontend.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MyShop_Frontend">
+    xmlns:local="using:MyShop_Frontend"
+    RequestedTheme="Light">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+                <ResourceDictionary Source="/Views/Themes/Generic.xaml"/>
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
 
-            <!-- Button Styles PointerOver -->
-            <Color x:Key="ButtonBackgroundPointerOver">#7A7BFF</Color>
-            <Color x:Key="ButtonForegroundPointerOver">White</Color>
-            <Color x:Key="ButtonBackgroundPressed">#7A7BFF</Color>
-            <Color x:Key="ButtonForegroundPressed">White</Color>
 
         </ResourceDictionary>
     </Application.Resources>
