--- a/src/Frontend/MyShop-Frontend/Views/Windows/MainWindow.xaml
+++ b/src/Frontend/MyShop-Frontend/Views/Windows/MainWindow.xaml
@@ -89,5 +89,8 @@
             </NavigationViewItem>
         </NavigationView.FooterMenuItems>
 
+        <NavigationView.Content>
+            <Frame x:Name="ContentFrame"/>
+        </NavigationView.Content>
     </NavigationView>
 </Window>
