--- a/src/Frontend/MyShop-Frontend/Views/Pages/CustomerPage.xaml
+++ b/src/Frontend/MyShop-Frontend/Views/Pages/CustomerPage.xaml
@@ -36,7 +36,8 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <TextBox PlaceholderText="Search customers..." Width="300" VerticalAlignment="Center" Margin="0,0,16,0"/>
+            <TextBox PlaceholderText="Search customers..." Width="300" VerticalAlignment="Center" Margin="0,0,16,0"
+                     Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Button Grid.Column="1" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal" Spacing="8">
